<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleReclamo"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/codigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_codigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/asunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_asunto"
        app:layout_constraintEnd_toEndOf="@+id/codigo"
        app:layout_constraintStart_toStartOf="@+id/codigo"
        app:layout_constraintTop_toBottomOf="@+id/codigo">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_descrip_reclamo"
        app:layout_constraintEnd_toEndOf="@+id/asunto"
        app:layout_constraintStart_toStartOf="@+id/asunto"
        app:layout_constraintTop_toBottomOf="@+id/asunto">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="270dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonPendiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pendiente" />

            <RadioButton
                android:id="@+id/radioButtonProceso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Proceso" />

            <RadioButton
                android:id="@+id/radioButtonCompleto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Completo" />

            <RadioButton
                android:id="@+id/radioButtonRechazado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rechazado" />

        </RadioGroup>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/detalleBtnEliminarLibro"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/btn_delete_libro"
        app:icon="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/detalleBtnUpdate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/detalleBtnUpdate"
        app:layout_constraintTop_toBottomOf="@+id/detalleBtnUpdate"
        app:layout_constraintVertical_bias="0.619" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/detalleBtnUpdate"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="320dp"
        android:text="@string/btn_apdate_libro"
        app:icon="@drawable/ic_check_circle"
        app:layout_constraintEnd_toEndOf="@+id/descripcion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/descripcion"
        app:layout_constraintTop_toBottomOf="@+id/descripcion" />


</androidx.constraintlayout.widget.ConstraintLayout>